--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -30,6 +30,7 @@
     "@apollo/server": "^4.3.1",
     "@as-integrations/aws-lambda": "^2.0.0",
     "@aws-sdk/client-dynamodb": "^3.258.0",
+    "@aws-sdk/client-rds-data": "^3.344.0",
     "@aws-sdk/client-sqs": "^3.272.0",
     "@aws-sdk/util-dynamodb": "^3.288.0",
     "@aws/dynamodb-data-mapper": "^0.7.3",
