--- a/gateway-service/samconfig.toml
+++ b/gateway-service/samconfig.toml
@@ -2,9 +2,21 @@ version = 0.1
 [default]
 [default.deploy]
 [default.deploy.parameters]
+stack_name = "dev-gateway-service"
+s3_prefix = "dev-gateway-service"
+region = "us-east-1"
+capabilities = "CAPABILITY_IAM"
+parameter_overrides = "Stage=\"DEV\" MainDomain=\"devfastchargeapi.com\" Route53ZoneId=\"Z07362872NENGXHWMNLU5\""
+image_repositories = []
+resolve_s3 = true
+
+[live]
+[live.deploy]
+[live.deploy.parameters]
 stack_name = "gateway-service"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-ku0vhjb0ewl6"
 s3_prefix = "gateway-service"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
+parameter_overrides = "Stage=\"DEV\" MainDomain=\"fastchargeapi.com\" Route53ZoneId=\"Z0358815GI2I8U5CTHXW\""
 image_repositories = []
