--- a/graphql-service/samconfig.toml
+++ b/graphql-service/samconfig.toml
@@ -1,11 +1,20 @@
 version = 0.1
-[default]
-[default.deploy]
-[default.deploy.parameters]
+[live]
+[live.deploy]
+[live.deploy.parameters]
 stack_name = "graphql-service"
 s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-ku0vhjb0ewl6"
 s3_prefix = "graphql-service"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
 parameter_overrides = "Stage=\"DEV\""
+image_repositories = []
+
+[default.deploy.parameters]
+stack_name = "dev-graphql-service"
+resolve_s3 = true
+s3_prefix = "dev-graphql-service"
+region = "us-east-1"
+capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND"
+parameter_overrides = " Stage=\"DEV\" MainDomain=\"devfastchargeapi.com\" Route53ZoneId=\"Z07362872NENGXHWMNLU5\""
 image_repositories = []
