--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -18,7 +18,7 @@
     "build": "npm run build:arm",
     "deploy": "npm run build && sam deploy --no-fail-on-empty-changeset",
     "stripe": "stripe listen --forward-to https://api.v2.payment.fastchargeapi.com/accept-stripe-payment -e 'checkout.session.completed,checkout.session.expired,checkout.session.async_payment_succeeded,checkout.session.async_payment_failed' & stripe listen --forward-to https://api.v2.payment.fastchargeapi.com/finish-stripe-onboard -e 'account.updated'",
-    "logs": "sam logs --stack-name payment-service --tail",
+    "logs": "sam logs --stack-name dev-payment-service --tail",
     "start": "npm run build && sam local start-api -p 3000 --warm-containers lazy",
     "watch": "nodemon -e ts,graphql,yml,yaml -i __generated__ --signal SIGINT -x 'npm run typecheck'",
     "test": "jest",
@@ -48,7 +48,8 @@
     "jsonwebtoken": "^9.0.0",
     "object-hash": "^3.0.0",
     "stripe": "^11.14.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "@aws-sdk/client-rds-data": "^3.344.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
