--- a/search-service/package.json
+++ b/search-service/package.json
@@ -12,7 +12,7 @@
     "gen": "graphql-codegen --config codegen.yml && prettier -w ./__generated__",
     "build": "npm run symlink && npm run gen && tsc --noEmit && sam build --cached --parallel",
     "deploy": "npm run build && sam deploy --no-fail-on-empty-changeset",
-    "logs": "sam logs --stack-name payment-service --tail",
+    "logs": "sam logs --stack-name dev-search-service --tail",
     "start": "npm run build && sam local start-api -p 11000 --warm-containers lazy",
     "watch": "nodemon -e ts,graphql,yml,yaml -i __generated__ --signal SIGINT -x 'npm run start || exit 1'",
     "test": "jest --runInBand",
