--- a/search-service/samconfig.toml
+++ b/search-service/samconfig.toml
@@ -1,9 +1,18 @@
 version = 0.1
 [default.deploy.parameters]
+stack_name = "dev-search-service"
+resolve_s3 = true
+s3_prefix = "dev-search-service"
+region = "us-east-1"
+capabilities = "CAPABILITY_AUTO_EXPAND CAPABILITY_NAMED_IAM CAPABILITY_IAM"
+parameter_overrides = "Stage=\"DEV\" MainDomain=\"devfastchargeapi.com\" Route53ZoneId=\"Z07362872NENGXHWMNLU5\""
+image_repositories = []
+
+[live.deploy.parameters]
 stack_name = "search-service"
 resolve_s3 = true
 s3_prefix = "search-service"
 region = "us-east-1"
 capabilities = "CAPABILITY_AUTO_EXPAND CAPABILITY_NAMED_IAM CAPABILITY_IAM"
-parameter_overrides = "Stage=\"DEV\" GatewayHostNameV2=\"api.v2.search.fastchargeapi.com\""
+parameter_overrides = "Stage=\"DEV\" MainDomain=\"fastchargeapi.com\" Route53ZoneId=\"Z0358815GI2I8U5CTHXW\""
 image_repositories = []
