--- a/search-service/template.yaml
+++ b/search-service/template.yaml
@@ -10,6 +10,9 @@ Parameters:
     Type: String
   Route53ZoneId:
     Type: String
+  EnvDevDomain:
+    Type: String
+    Default: ""
   Stage:
     Type: String
     Default: DEV
@@ -24,6 +27,9 @@ Parameters:
 Globals:
   Function:
     Tracing: Active
+    Environment:
+      Variables:
+        DEV_DOMAIN: !Ref EnvDevDomain
   Api:
     TracingEnabled: true
 
@@ -190,7 +196,6 @@ Resources:
       EngineVersion: "13.9"
       DatabaseName: db1
       MasterUsername: postgres
-      # MasterUserPassword: "{{resolve:ssm-secure:/search.aurora_password}}"
       MasterUserPassword: !Join ["", ["{{resolve:secretsmanager:", !Ref AuroraDBSecret, ":SecretString:password}}"]]
       DBClusterIdentifier: fastcharge-search-cluster
       EnableHttpEndpoint: true
