--- a/auth-service/template.yaml
+++ b/auth-service/template.yaml
@@ -10,6 +10,9 @@ Parameters:
     Type: String
   Route53ZoneId:
     Type: String
+  EnvDevDomain:
+    Type: String
+    Default: ""
   Stage:
     Type: String
     Default: DEV
@@ -23,6 +26,9 @@ Globals:
     Timeout: 1
     MemorySize: 128
     Tracing: Active
+    Environment:
+      Variables:
+        DEV_DOMAIN: !Ref EnvDevDomain
   Api:
     TracingEnabled: true
 
