--- a/graphql-service/template.yaml
+++ b/graphql-service/template.yaml
@@ -10,6 +10,9 @@ Parameters:
     Type: String
   Route53ZoneId:
     Type: String
+  EnvDevDomain:
+    Type: String
+    Default: ""
   Stage:
     Type: String
     Default: DEV
@@ -25,6 +28,9 @@ Globals:
   Function:
     Timeout: 3
     MemorySize: 3008
+    Environment:
+      Variables:
+        DEV_DOMAIN: !Ref EnvDevDomain
     Tags:
       service-name: graphql-service
 
