--- a/payment-service/template.yaml
+++ b/payment-service/template.yaml
@@ -10,6 +10,9 @@ Parameters:
     Type: String
   Route53ZoneId:
     Type: String
+  EnvDevDomain:
+    Type: String
+    Default: ""
   Stage:
     Type: String
     Default: DEV
@@ -21,6 +24,9 @@ Parameters:
 Globals:
   Function:
     Tracing: Active
+    Environment:
+      Variables:
+        DEV_DOMAIN: !Ref EnvDevDomain
   Api:
     TracingEnabled: true
 
